Fixes graph title subtitle align.
In small screens the title and subtitle
would not align properly.

--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -110,11 +110,13 @@
 
 .graph-subtitle {
   font-size: 17px;
+  text-align: center;
 }
 
 .graph-title {
   font-size: 35px;
   font-weight: 100;
+  text-align: center;
 }
 
 .refresh-button {
